findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
/* ... */
.sdk-top-down-interface input:focus{
  outline: 0;
  border: 1px solid var(--sdk-border-allports-color) !important;
}



/* Checkboxes */

.sdk-top-down-interface .kr-sg-checkbox {
  display: inline-flex;
  padding-right: 32px;
  margin-bottom: 10px;
  position: relative;
}
.sdk-top-down-interface .kr-sg-checkbox.d-block {
  display: block;
}
.sdk-top-down-interface .kr-sg-checkbox .checkbox-custom {
  opacity: 0;
  position: absolute;
  cursor: pointer;
  margin: 0;
}
.sdk-top-down-interface .kr-sg-checkbox .checkbox-custom + .checkbox-custom-label {
  display: inline-block;
  vertical-align: middle;
  cursor: pointer;
  position: relative;
  font-size: 14px;
  color: var(--sdk-shark-black-color);
  margin: 0;
  font-weight: normal;
}
.sdk-top-down-interface .kr-sg-checkbox .checkbox-custom + .checkbox-custom-label::before {
  content: '';
  display: inline-block;
  vertical-align: middle;
  width: 18px;
  height: 18px;
  top: 0;
  padding: 0;
  margin-right: 8px;
  text-align: center;
  border-radius: 2px;
  border: solid 1px var(--sdk-border-silver-sand-color);
  background-color: var(--sdk-white-bg);
  margin-top: -3px;
}
.sdk-top-down-interface .kr-sg-checkbox .checkbox-custom:hover:not([disabled]):checked + .checkbox-custom-label {
  color: var(--sdk-shark-black-color);
}
.sdk-top-down-interface .kr-sg-checkbox .checkbox-custom:hover:not([disabled]):checked + .checkbox-custom-label::before {
  border: solid 1px var(--sdk-border-silver-sand-color);
}
.sdk-top-down-interface .kr-sg-checkbox .checkbox-custom:hover:not([disabled]) + .checkbox-custom-label {
  color: var(--sdk-primary-blue-color);
}
.sdk-top-down-interface .kr-sg-checkbox .checkbox-custom:hover:not([disabled]) + .checkbox-custom-label::before {
  border: solid 1px var(--sdk-border-blue-ribbon-color);
}
.sdk-top-down-interface .kr-sg-checkbox .checkbox-custom:checked + .checkbox-custom-label::before {
  content: "";
  background-color: var(--sdk-primary-blue-color);
  background-image: var(--sdk-checkbox-custom-label-image);
  color: var(--sdk-white-font-color);
  font-size: 12px;
  background-size: 14px;
  background-repeat: no-repeat;
  background-position: center;
  border: 1px solid var(--sdk-primary-blue-color) !important;
}
.sdk-top-down-interface .kr-sg-checkbox .checkbox-custom:checked:focus + .checkbox-custom-label {
  color: var(--sdk-shark-black-color);
}
.sdk-top-down-interface .kr-sg-checkbox .checkbox-custom:checked:disabled + .checkbox-custom-label::before {
  background-color: var(--sdk-border-morning-glory-color);
}
.sdk-top-down-interface .kr-sg-checkbox .checkbox-custom:disabled + .checkbox-custom-label::before {
  border: solid 1px var(--sdk-border-silver-sand-color);
}
.sdk-top-down-interface .kr-sg-checkbox .checkbox-custom:focus + .checkbox-custom-label {
  color: var(--sdk-primary-blue-color);
}
.sdk-top-down-interface .kr-sg-checkbox .checkbox-custom:focus + .checkbox-custom-label::before {
  border: 1px solid var(--sdk-border-blue-ribbon-color);
}

.sdk-top-down-interface .category-wise-container .group-checkbox.filters-content-top-down{
  border-bottom: none;
   padding: 0px;
   /* max-height: 218px; */
   /* overflow: auto; */
   position: relative;
}
.sdk-top-down-interface .category-wise-container .heading-title{
  color: var(--sdk-shark-black-color);
  font-weight: 500;
  font-size: 14px;
  line-height: 17px;
  margin-bottom: 17px;
}
.sdk-top-down-interface .category-wise-container .kr-sg-checkbox{
  margin-bottom: 10px;
  padding-right: 0;
}
.sdk-top-down-interface .category-wise-container .kr-sg-checkbox .count{
  color: var(--sdk-dusty-gray-color);
  position: absolute;
  margin-left: 2px;
  top: 0;
}
.sdk-top-down-interface .category-wise-container .kr-sg-checkbox .checkbox-custom + .checkbox-custom-label,.dropdown-content .option-text .kr-sg-checkbox .checkbox-custom + .checkbox-custom-label{
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  padding-right: 0;
  max-width: 86%;
}

.sdk-top-down-interface .category-wise-container .kr-sg-checkbox .checkbox-custom + .checkbox-custom-label::before{
  margin-top: 0;
}

.sdk-top-down-interface .category-wise-container .kr-sg-radiobutton .radio-custom + .radio-custom-label{
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  padding-right: 0;
  max-width: 86%;
}

.sdk-top-down-interface .kr-sg-radiobutton .count{
  color: var(--sdk-dusty-gray-color);
  position: absolute;
  margin-left: 2px;
  top: 0;
}




/* Radio Buttons */



.sdk-top-down-interface .kr-sg-radiobutton {
  display: inline-flex;
  padding-right: 0px;
  position: relative;
}
.sdk-top-down-interface .kr-sg-radiobutton.d-block {
  display: block;
  margin: 0;
  margin-bottom: 8px !important;
  padding: 0 32px 0 0!important;
}
.sdk-top-down-interface .kr-sg-radiobutton .radio-custom {
  opacity: 0;
  position: absolute;
  cursor: pointer;
  margin: 0;
  height: auto;
}
.sdk-top-down-interface .kr-sg-radiobutton .radio-custom + .radio-custom-label {
  display: inline-block;
  vertical-align: middle;
  cursor: pointer;
  position: relative;
  font-size: 14px;
  color: var(--sdk-shark-black-color);
  margin: 0;
  font-weight: normal;
  padding-left: 26px;
  line-height: 20px;
}
.sdk-top-down-interface .kr-sg-radiobutton .radio-custom + .radio-custom-label::before {
  content: '';
  display: inline-block;
  vertical-align: middle;
  width: 16px;
  height: 16px;
  top: 0;
  padding: 0;
  margin-right: 12px;
  text-align: center;
  border-radius: 2px;
  border: solid 1px var(--sdk-border-silver-sand-color);
  background-color: var(--sdk-white-bg);
  margin-top: -3px;
  border-radius: 100px;
  left: 0;
  position: absolute;
  top: 5px;
}
.sdk-top-down-interface .kr-sg-radiobutton .radio-custom:hover:not([disabled]):checked + .radio-custom-label {
  color: var(--sdk-shark-black-color);
}
/* ... */

